AUTOMAKE_OPTIONS = foreign subdir-objects
AM_LDFLAGS =  -Wall -pthread -lwiringPi
bin_PROGRAMS = excellentea
excellentea_SOURCES = excellentea.cpp \
			Classes/BrewTimer.cpp \
	Classes/BrewTimer.h \
	Classes/ControllerThread.cpp \
	Classes/ControllerThread.h \
	Classes/CppThread.h \
	Classes/CppTimer.h \
	Classes/WebThread.cpp \
	Classes/WebThread.h \
	Classes/ds18b20.cpp \
	Classes/ds18b20.h \
	Classes/sensor.cpp \
	Classes/sensor.h \
	Classes/stepper.cpp \
	Classes/stepper.h \
	Classes/tea.cpp \
	Classes/tea.h