AUTOMAKE_OPTIONS = foreign subdir-objects
AM_LDFLAGS =  -Wall -pthread -lwiringPi
bin_PROGRAMS = excellentea
excellentea_SOURCES = excellentea.cpp \
			Classes/Actuator.cpp \
			Classes/Actuator.h \
			Classes/BrewTimer.cpp \
			Classes/BrewTimer.h \
			Classes/ControllerThread.cpp \
			Classes/ControllerThread.h \
			Classes/CppThread.h \
			Classes/CppTimer.h \
			Classes/WebThread.cpp \
			Classes/WebThread.h \
			Classes/DS18B20.cpp \
			Classes/DS18B20.h \
			Classes/Sensor.cpp \
			Classes/Sensor.h \
			Classes/Stepper.cpp \
			Classes/Stepper.h \
			Classes/Tea.cpp \
			Classes/Tea.h