AUTOMAKE_OPTIONS = foreign subdir-objects
AM_LDFLAGS =  -Wall -pthread -lwiringPi
bin_PROGRAMS = excellentea
excellentea_SOURCES = excellentea.cpp \
			Classes/Actuator.cpp \
			Classes/Actuator.h \
			Classes/DS18B20.cpp \
			Classes/DS18B20.h \
			Classes/I2CIO.cpp \
			Classes/I2CIO.h \
			Classes/LCD.cpp \
			Classes/LCD.h \
			Classes/LiquidCrystal.cpp \
			Classes/LiquidCrystal.h \
			Classes/LiquidCrystal_I2C.cpp \
			Classes/LiquidCrystal_I2C.h \
			Classes/Sensor.cpp \
			Classes/Sensor.h \
			Classes/Stepper.cpp \
			Classes/Stepper.h \
			Classes/Tea.cpp \
			Classes/Tea.h